--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     
 
     <meta property="og:title" content="Camille Secrets">
-    <meta property="og:description" content="Esta é a página de serviço de web designer ">
-    <meta property="og:image" content="https://camillesecrets.github.io/Camille-Secrets/assets/imagem/CamilleSecrets.jpg">
+    <meta property="og:description" content="Esta é a página de serviço de web designer da Shimazu Tech">
+    <meta property="og:image" content="https://github.com/CamilleSecrets/Shimazu/blob/main/fly/og.png">
 
 
 
