--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
    <style>
 
 body{
+    height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
     background-image: url('fly/header.jpg');
         background-size: cover;
         background-repeat: no-repeat;
