--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Icaro Rodrigues Shimazu" />
     
 
-    <meta property="og:title" content="Camille Secrets">
+    <meta property="og:title" content="Shimazu Tech">
     <meta property="og:description" content="Esta é a página de serviço de web designer da Shimazu Tech">
     <meta property="og:image" content="https://github.com/CamilleSecrets/Shimazu/blob/main/fly/og.png">
 
