--- a/index.html
+++ b/index.html
@@ -43,8 +43,16 @@ body{
     padding-bottom: 56.25%; /* Proporção 16:9 */
     height: 0;
     overflow: hidden;
-    text-align: center;
 }
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 #loader {
             position: fixed;
             top: 0;
