--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ body{
     </div>
     <div id="conteudo" style="display: none;">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg -uppercase" style="margin: 0;
+        <nav class="navbar navbar-expand-lg -uppercase" style="margin: 0; text-aling:rigth;
         padding: 0;
         background-image: url('fly/wood.jpg');
         background-repeat: no-repeat;
@@ -95,13 +95,12 @@ body{
                 background-attachment: fixed;
                 -webkit-background-size: cover; /* Para navegadores WebKit (Chrome, Safari) */
                 -moz-background-size: cover; /* Para Firefox */"
-            class="navbar-toggler text-uppercase font-weight-bold bg-primary text-black rounded"
-            data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive"
-            aria-expanded="false" aria-label="Toggle navigation">
+           class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">>
             Menu
             <i class="fas fa-bars"></i>
         </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarResponsive">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 --bs-white rounded"
                         href="#portfolio"><img src="fly/port.png"></a></li>
