--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ body{
     </div>
     <div id="conteudo" style="display: none;">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg -uppercase" style="margin: 0; text-aling:rigth;
+        <nav class="navbar navbar-expand-lg -uppercase" style="margin: 0; 
         padding: 0;
         background-image: url('fly/wood.jpg');
         background-repeat: no-repeat;
@@ -100,8 +100,8 @@ body{
             Menu
             <i class="fas fa-bars"></i>
         </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarResponsive">
-            <ul class="navbar-nav ms-auto">
+        <div class="collapse navbar-collapse" style="margin-right:0px;" id="navbarResponsive">
+            <ul class="navbar-nav" style="margin-right:0px;">
                 <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 --bs-white rounded"
                         href="#portfolio"><img src="fly/port.png"></a></li>
                 <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 --bs-white rounded"
