--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@ body{
         -webkit-background-size: cover; /* Para navegadores WebKit (Chrome, Safari) */
         -moz-background-size: cover; /* Para Firefox */
 }
-       .collapse.navbar-collapse {
+       .navbar-collapse {
     display: flex;
     justify-content: flex-end;
-           width:150px;
 }
 .video-container {
     position: relative;
