--- a/index.html
+++ b/index.html
@@ -39,8 +39,14 @@ body{
 }
        .navbar-collapse {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-end
+    width: auto !important; /* Faz a largura se ajustar ao conteúdo */
 }
+       .navbar-nav {
+    display: flex;
+    align-items: center;
+}
+
 .video-container {
     position: relative;
     width: 100%;
