--- a/index.html
+++ b/index.html
@@ -40,12 +40,9 @@ body{
        .navbar-collapse {
     display: flex;
     justify-content: flex-end
-    width: auto !important; /* Faz a largura se ajustar ao conteúdo */
+    width:  150px; /* Faz a largura se ajustar ao conteúdo */
 }
-       .navbar-nav {
-    display: flex;
-    align-items: center;
-}
+
 
 .video-container {
     position: relative;
