--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body{
 }
        .navbar-collapse {
     display: flex;
-    justify-content: flex-end
+    justify-content: flex-end;
     width:  150px; /* Faz a largura se ajustar ao conteúdo */
 }
 
