--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ body{
     display: flex;
     justify-content: flex-end;
     width:  150px; /* Faz a largura se ajustar ao conteúdo */
+               position: absolute;
 }
 
 
