--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@ body{
 }
        .navbar-collapse {
     display: flex;
-    justify-content: flex-end;
     width:  150px; /* Faz a largura se ajustar ao conteúdo */
                position: absolute;
+           text-aling:rigth;
+           margin-top:30px;
 }
 
 
