--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ body{
     display: flex;
     width:  150px; /* Faz a largura se ajustar ao conteúdo */
                position: absolute;
-           text-aling:rigth;
-           margin-top:30px;
+text-align: right;
+           margin-top:100px;
 }
 
 
