--- a/index.html
+++ b/index.html
@@ -277,6 +277,8 @@ text-align: right;
                                     <img class="img-fluid rounded mb-5" src="fly/business.png"
                                         alt="..." />
                                     <!-- Portfolio Modal - Text-->
+                                    <h5 class="mb-4"><strong>Esse serviço utiliza as tecnologias do GitHub, Cloudflare e Registro br</strong></h5>
+
                                     <h5 class="mb-4"><strong>Valor do serviço R$:100</strong></h5>
                                     <button style="background-color: #000; color: white;" class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
@@ -291,7 +293,11 @@ text-align: right;
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-      
+      <script>
+          window.onload = function() {
+    alert("Pague após o site estar pronto");
+};
+      </script>
         <script>
             window.addEventListener("load", function () {
                 setTimeout(() => {
