--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ body{
             Menu
             <i class="fas fa-bars"></i>
         </button>
-        <div class="collapse navbar-collapse" style="margin-right:0px;" id="navbarResponsive">
+        <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav" style="margin-right:0px;">
                 <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 --bs-white rounded"
                         href="#portfolio"><img src="fly/port.png"></a></li>
