--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@ body{
         display: flex;
         justify-content: flex-end; /* Move os itens para a direita */
     }
+
+    .navbar-nav {
+        margin-left: auto; /* Empurra os itens do menu para a direita */
+    }
 }
+
 
 
 
