--- a/index.html
+++ b/index.html
@@ -40,13 +40,16 @@ body{
 @media (min-width: 992px) { 
     .navbar-collapse {
         display: flex;
-        justify-content: flex-end; /* Move os itens para a direita */
+        justify-content: flex-end !important; /* Garante que o menu vá para a direita */
     }
 
     .navbar-nav {
-        margin-left: auto; /* Empurra os itens do menu para a direita */
+        margin-left: auto !important; /* Empurra os itens para a direita */
+        display: flex;
+        flex-direction: row;
     }
 }
+
 
 
 
