--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ body{
     .navbar-collapse {
         display: flex;
         justify-content: flex-end !important; /* Garante que o menu vá para a direita */
+        text-align:right;
     }
 
     .navbar-nav {
