--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@ body{
     .navbar-collapse {
         display: flex;
         justify-content: flex-end !important; /* Garante que o menu vá para a direita */
-        text-align:right;
+           margin-right:0px;
     }
 
     .navbar-nav {
-        margin-left: auto !important; /* Empurra os itens para a direita */
+           margin-right:0px;
         display: flex;
         flex-direction: row;
     }
