--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@ body{
     }
 
    
-
+@media (max-width: 768px) {
+    .navbar-collapse {
+        display: flex;
+        justify-content: flex-end !important; /* Garante que o menu vá para a direita */
+        position: absolute;
+        margin-top: 200px;
+        right: 0; /* Alinha o menu à direita */
+    }
+}
 
 
 
