--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
     <meta property="og:title" content="Shimazu Tech">
     <meta property="og:description" content="Esta é a página de serviço de web designer da Shimazu Tech">
-    <meta property="og:image" content="https://github.com/CamilleSecrets/Shimazu/blob/main/fly/og.png">
-
+<meta property="og:image" content="https://raw.githubusercontent.com/CamilleSecrets/Shimazu/main/fly/og.png">
 
 
     <title>Simazu Tech</title>
