--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ body{
                         <img src="fly/localizar.png" width="200" height="150"> <h4 class="text-uppercase mb-4">Localização
                         </h4>
                         <p class="lead mb-0">
-                            Rua Juhei Muramoto
+                            Industrial
                             <br />
                             Londrina, PR
                         </p>
